# syncnerf-nerfstudio

./: README.md  pyproject.toml
environments/: Dockerfile
environments/wajin/: docker-compose.yaml
syncnerf/: fourdv_dataparser.py  syncnerf.py  syncnerf_configs.py  syncnerf_dataparser.py  syncnerf_field.py
